--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,11 +14,12 @@
                     <i class="fa fa-github"></i>
                 </span>
             </a>
-            <a class="nav-item" target="_blank" href="https://www.twitter.com/{{site.twitter.username}}/">
+	    <a class="nav-item" target="_blank" href="https://www.linkedin.com/{{site.linkedin.username}}/">
                 <span class="icon">
-                    <i class="fa fa-twitter"></i>
+                    <i class="fa fa-linkedin"></i>
                 </span>
             </a>
+
         </div>
 
         <span class="nav-toggle">
