--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,1 +1,6 @@
 <script src="{{ '/js/script.js' | relative_url }}"></script>
+
+<script src="{{ '/js/particles.js' | relative_url }}"></script>
+
+<script src="{{ '/js/app.js' | relative_url }}"></script>
+
