--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,12 @@
                 <div class="content">
                     <p>
                         <small>
+		            <span>Jeremiah Volkmer 2021 / </span>
                             <span>Powered by</span>
                             <a target="_blank" href="http://jekyllrb.com/">Jekyll</a>
                             <span> / Styled using </span>
                             <a target="_blank" href="http://bulma.io/">Bulma</a>
+			    <span> / Thx lamccloskey & github</span>
                         </small>
                     </p>
                 </div>
