--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,14 @@
 <section class="hero is-primary is-small">
+    <div id="particles-js"> 
+        <div> 
+            <p class="home-title">{{site.title}}</p>
+            <h1 class="home-sub-title">{{ site.data.header.message }}</h1>
+        </div>
+    </div>
+</section>
+
+<!--Stock Code-->
+<!--
     <div class="hero-body">
         <div class="container has-text-centered">
             <p class="title is-1">
@@ -9,4 +19,4 @@
             </p>
         </div>
     </div>
-</section>
+-->
