--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,15 @@
 <section class="hero is-primary is-small">
-    <div id="particles-js"> 
-        <div> 
-            <h1 class="home-sub-title">{{ site.data.header.message }}</h1>
-        </div>
-    </div>
+	<div>
+	    <div class="calvin">
+	    <img src="img/flower.png" alt="Hobbs jumping Calvin">
+	    </div>
+	    <h1 class="home-sub-title">{{ site.data.header.message }}</h1>
+	</div>
 </section>
 
-<!--Stock Code-->
+<!--Stock Code
+# <div id="particles-js">
+-->
 <!--
     <div class="hero-body">
         <div class="container has-text-centered">
