removed header img

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,12 @@
 <section class="hero is-primary is-small">
-	<div>
-	    <div class="calvin">
-	    <img src="img/flower.png" alt="Hobbs jumping Calvin">
-	    </div>
-	    <h1 class="home-sub-title">{{ site.data.header.message }}</h1>
-	</div>
+    <div id="particles-js"> 
+        <div>
+            <h1 class="home-sub-title">{{ site.data.header.message }}</h1>
+        </div>
+    </div>
 </section>
 
-<!--Stock Code
-# <div id="particles-js">
--->
+<!--Stock Code-->
 <!--
     <div class="hero-body">
         <div class="container has-text-centered">
